# Cli-Games

./: CMakeLists.txt
doc/: conventions.md
doc/class-diagrams/: main.puml
doc/class-diagrams/battleship/: main.puml
doc/class-diagrams/window/: main.puml
doc/use-cases/: main.puml
doc/use-cases/window/: main.puml
src/: CMakeLists.txt  TODO.md  cmdMode.cpp  cmdMode.h  constant.h  insMode.cpp  insMode.h  main.cpp  norMode.cpp  norMode.h
src/battleship/: battleship.cpp  battleship.h  board.cpp  board.h  board_ai.cpp  board_ai.h  constant.h  constantbtshp.h  ship.cpp  ship.h
src/cg_error/: cg_error.h
src/window/: insert_win.cpp  insert_win.h  select_win.cpp  select_win.h  stdwindow.cpp  stdwindow.h  text_win.cpp  text_win.h  window.cpp  window.h
